# YAL

./: .gitignore  Makefile  README.md  pyproject.toml
yal/: answers_writer.py  cli.py  conditions.py  generators.py  git_provider.py  github.py  i18n.py  picker.py  project_config.py  store.py  template_config.py  user_store.py  version.py  yal_project_writer.py  yal_toml_writer.py
yal/commands/: add.py  create.py  new.py  remove.py  run.py  update.py
yal/locales/: en.toml  ru.toml
yal/templates/: book_handler.py  handler.py  handler_def.py  registry.py  user_registry.py
