[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yal-cmd"
version = "0.1.1"
authors = [
    { name = "Yalla Nkardaz", email = "dev_nkardaz@proton.me" }
]
readme = "README.md"
description = "Yalla Nkardaz’s personal CLI toolkit"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "requests >=2.34.2",
    "pyyaml >=6.0.3",
    "ruamel.yaml >=0.19.1",
    "tomli; python_version < '3.11'",
]

[project.scripts]
yal = "yal.cli:main"

[tool.setuptools.packages.find]
where = ["."]
