[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yal-cmd"
version = "0.1.3"
authors = [
    { name = "Yalla Nkardaz", email = "dev_nkardaz@proton.me" }
]
readme = "README.md"
description = "Yalla Nkardaz’s personal CLI toolkit"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "requests >=2.34.2",
    "ruamel.yaml >=0.19.1",
    "tomli-w >=1.2.0",
    "tomli; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/NKARDAZ/YAL"
Repository = "https://github.com/NKARDAZ/YAL"
Issues = "https://github.com/NKARDAZ/YAL/issues"

[project.scripts]
yal = "yal.cli:main"

[tool.setuptools.packages.find]
where = ["."]
